Add delete client/vehicle
